[tool.poetry]
name = "hackcheck"
version = "1.2.0"
description = "Official API wrapper for hackcheck.io"
authors = ["HackCheck <support@hackcheck.io>"]
repository = "https://github.com/hackcheckio/hackcheck-py/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.28.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
